--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".MainActivity">
+                tools:context="neural.imagerecognizer.app.ui.activities.MainActivity">
 
 
     <neural.imagerecognizer.app.ui.views.PaintView
@@ -53,26 +54,6 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>
 
-    <ImageView
-            android:id="@+id/ivPencil"
-            android:src="@drawable/ic_lead_pencil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_small"
-            android:layout_alignBottom="@+id/btnWhatis"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
 
-
-    <ImageView
-            android:id="@+id/ivErse"
-            android:src="@drawable/ic_eraser_variant"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@+id/ivPencil"
-            android:layout_toStartOf="@+id/ivPencil"
-            android:layout_alignTop="@+id/ivPencil"/>
 
 </RelativeLayout>
