--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -5,7 +5,7 @@
     android:descendantFocusability="blocksDescendants">
 
     <ImageView
-        android:layout_width="150dp"
+        android:layout_width="130dp"
         android:layout_height="150dp"
         android:id="@+id/imageView1" />
 
@@ -13,23 +13,21 @@
         android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="169dp"
-            android:layout_height="40dp"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
             android:gravity="center"
             android:text="New Text"
             android:textColor="#000000"
             android:textSize="25dp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="169dp"
+            android:layout_width="190dp"
             android:layout_height="50dp"
             android:layout_marginBottom="63dp"
             android:gravity="center"
@@ -48,9 +46,7 @@
         android:focusable="false"
         android:clickable="false"
         android:layout_weight="1" />
-
-
-
+    
 </neural.imagerecognizer.app.ui.views.CheckableLinearLayout>
 
 
